#1749 extended service model, allow retrieval of multiple events from datastore
