# pkg/api/models/service.go
@@ -6,23 +6,96 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"strconv"
+
+	"github.com/go-openapi/errors"
 	strfmt "github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // Service service
 // swagger:model Service
 type Service struct {
 
+	// Creation date of the service
+	CreationDate string `json:"creationDate,omitempty"`
+
+	// Currently deployed image
+	DeployedImage string `json:"deployedImage,omitempty"`
+
+	// last event types
+	LastEventTypes map[string]EventContextInfo `json:"lastEventTypes,omitempty"`
+
+	// open approvals
+	OpenApprovals []*Approval `json:"openApprovals"`
+
 	// Service name
 	ServiceName string `json:"serviceName,omitempty"`
-
-	// Creation Date
-	CreationDate string `json:"creationDate,omitempty"`
 }
 
 // Validate validates this service
 func (m *Service) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLastEventTypes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOpenApprovals(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Service) validateLastEventTypes(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.LastEventTypes) { // not required
+		return nil
+	}
+
+	for k := range m.LastEventTypes {
+
+		if err := validate.Required("lastEventTypes"+"."+k, "body", m.LastEventTypes[k]); err != nil {
+			return err
+		}
+		if val, ok := m.LastEventTypes[k]; ok {
+			if err := val.Validate(formats); err != nil {
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *Service) validateOpenApprovals(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.OpenApprovals) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.OpenApprovals); i++ {
+		if swag.IsZero(m.OpenApprovals[i]) { // not required
+			continue
+		}
+
+		if m.OpenApprovals[i] != nil {
+			if err := m.OpenApprovals[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("openApprovals" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
 	return nil
 }
 
