# pkg/api/utils/eventUtils.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"io/ioutil"
 	"net/http"
+	"net/url"
 	"strings"
 
 	"github.com/keptn/go-utils/pkg/api/models"
@@ -16,6 +17,15 @@ type EventHandler struct {
 	AuthHeader string
 	HTTPClient *http.Client
 	Scheme     string
+}
+
+type EventFilter struct {
+	Project      string
+	Stage        string
+	Service      string
+	EventType    string
+	KeptnContext string
+	EventID      string
 }
 
 // NewEventHandler returns a new EventHandler
@@ -79,6 +89,34 @@ func (e *EventHandler) SendEvent(event models.KeptnContextExtendedCE) (*models.E
 	return post(e.Scheme+"://"+e.getBaseURL()+"/v1/event", bodyStr, e)
 }
 
+func (e *EventHandler) GetEvents(filter *EventFilter) ([]*models.KeptnContextExtendedCE, *models.Error) {
+	raw := e.Scheme + "://" + e.getBaseURL() + "/datastore/event?"
+
+	u, _ := url.Parse(raw)
+
+	query := u.Query()
+
+	if filter.Project != "" {
+		query.Set("project", filter.Project)
+	}
+	if filter.Stage != "" {
+		query.Set("stage", filter.Stage)
+	}
+	if filter.Service != "" {
+		query.Set("service", filter.Service)
+	}
+	if filter.KeptnContext != "" {
+		query.Set("keptnContext", filter.KeptnContext)
+	}
+	if filter.EventID != "" {
+		query.Set("eventID", filter.EventID)
+	}
+
+	u.RawQuery = query.Encode()
+
+	return e.getEvents(u.String(), e)
+}
+
 // GetEvent returns an event specified by keptnContext and eventType
 func (e *EventHandler) GetEvent(keptnContext string, eventType string) (*models.KeptnContextExtendedCE, *models.Error) {
 	return getEvent(e.Scheme+"://"+e.getBaseURL()+"/v1/event?keptnContext="+keptnContext+"&type="+eventType+"&pageSize=10", e)
@@ -124,4 +162,58 @@ func getEvent(uri string, api APIService) (*models.KeptnContextExtendedCE, *mode
 	}
 
 	return nil, &respErr
+}
+
+func (e *EventHandler) getEvents(uri string, api APIService) ([]*models.KeptnContextExtendedCE, *models.Error) {
+	events := []*models.KeptnContextExtendedCE{}
+	nextPageKey := ""
+
+	for {
+		url, err := url.Parse(uri)
+		if err != nil {
+			return nil, buildErrorResponse(err.Error())
+		}
+		q := url.Query()
+		if nextPageKey != "" {
+			q.Set("nextPageKey", nextPageKey)
+			url.RawQuery = q.Encode()
+		}
+		req, err := http.NewRequest("GET", url.String(), nil)
+		req.Header.Set("Content-Type", "application/json")
+		addAuthHeader(req, e)
+
+		resp, err := e.HTTPClient.Do(req)
+		if err != nil {
+			return nil, buildErrorResponse(err.Error())
+		}
+		defer resp.Body.Close()
+
+		body, err := ioutil.ReadAll(resp.Body)
+		if err != nil {
+			return nil, buildErrorResponse(err.Error())
+		}
+
+		if resp.StatusCode == 200 {
+			received := &models.Events{}
+			err = json.Unmarshal(body, received)
+			if err != nil {
+				return nil, buildErrorResponse(err.Error())
+			}
+			events = append(events, received.Events...)
+
+			if received.NextPageKey == "" || received.NextPageKey == "0" {
+				break
+			}
+			nextPageKey = received.NextPageKey
+		} else {
+			var respErr models.Error
+			err = json.Unmarshal(body, &respErr)
+			if err != nil {
+				return nil, buildErrorResponse(err.Error())
+			}
+			return nil, &respErr
+		}
+	}
+
+	return events, nil
 }
